# backend/lib/webserver/RobotRouter.js
@@ -5,6 +5,7 @@ const ValetudoRobot = require("../core/ValetudoRobot");
 
 const CapabilitiesRouter = require("./CapabilitiesRouter");
 const {SSEHub, SSEMiddleware} = require("./middlewares/sse");
+const DreameValetudoRobot = require("../robots/dreame/DreameValetudoRobot");
 
 class RobotRouter {
     /**
@@ -63,6 +64,30 @@ class RobotRouter {
                 const polledState = await this.robot.pollState();
 
                 res.json(polledState.map);
+            } catch (err) {
+                res.status(500).send(err.toString());
+            }
+        });
+
+        this.router.get("/get-object", async (req, res) => {
+            try {
+                if (this.robot instanceof DreameValetudoRobot)
+                {
+                    
+                    const objectName =  req.query.obj_name;
+                    const fdsObject = this.robot.fdsObjects.find(name => name === objectName);
+
+                    if (fdsObject === undefined)
+                    {
+                        res.status(404).send("Object not found");
+                        return;
+                    }
+
+                    res.json(fdsObject);
+                    return;
+                }
+
+                res.status(418).send("Robot not supported");
             } catch (err) {
                 res.status(500).send(err.toString());
             }
